2007-05-16  Douglas Bates  <bates@stat.wisc.edu>

	* R/CHMfactor.R: Added solve methods for a CHMfactor object.

2007-05-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (sparsapply): new utility, much faster than
	tapply1() for large sparse matrices.

2007-05-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (dim<-): reshape now via sparseVector.

	* R/sparseVector.R: methods and function for
	* R/AllClass.R: new "sparseVector" class and daughters.
	* NAMESPACE: export new classes

2007-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99875-1
	* src/Makefile.win: also remove Lapack code from here (cf. 04-25).

2007-05-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R ([, Tsparse): fix last case: *duplicated*, symmetric
	indexing
	* tests/indexing.R: test set for that.

2007-05-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (replTmat): fix the case of *duplicated* index
	entries.
	* tests/indexing.R(out): add regression test for it

2007-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/(l(dense|sparse))?Matrix.R (!): use 'x', not 'e1' as argument
	name for "!" method definitions.

2007-04-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (intI): new utility, used for "[" :
		Cleanup up there, and fixes for duplicated indices - more TODO!

	* tests/indexing.R(out): more tests

2007-04-25  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION,src/Makefile: require R>= 2.5.0 and remove Lapack
	code that is now part of the R Lapack library.

	* src/init.c,inst/include/{Matrix_stubs.c,cholmod.h}:export
	cholmod_factorize_p (used in lme4 for GLMMs and NLMMs).

2007-04-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (image): method for all Matrices, not just sparse ones.

2007-04-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (tapply1): unname(.) -> colSums() etc don't end